salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/infer3__Num_Engaged_Contacts__c.field-meta.xml
<CustomField>
    <fullName>infer3__Num_Engaged_Contacts__c</fullName>
    <label>Infer: Number of Engaged Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>