salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/infer3__Num_Engaged_Entities__c.field-meta.xml
<CustomField>
    <fullName>infer3__Num_Engaged_Entities__c</fullName>
    <formula>infer3__Num_Engaged_Contacts__c +  infer3__Num_Engaged_Leads__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Infer: Number of Engaged Entities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>