salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/infer3__Score_Index__c.field-meta.xml
<CustomField>
    <fullName>infer3__Score_Index__c</fullName>
    <label>Infer Score Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>