salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/infer3__Score_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>infer3__Score_Object_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Infer Score Object ID</label>
    <referenceTo>infer3__Score_Object__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Account_Score_Object</relationshipName>
    <type>Lookup</type>
</CustomField>