salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/infer3__Score_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>infer3__Score_Snapshot__c</fullName>
    <description>A saved copy of the score, if the &quot;Update Account with Score Update&quot; option is enabled. This field is only intended for custom triggers or third-party systems that can&#39;t track formula fields.</description>
    <inlineHelpText>A saved copy of the score, if the &quot;Update Account with Score Update&quot; option is enabled. This field is only intended for custom triggers or third-party systems that can&#39;t track formula fields.</inlineHelpText>
    <label>Infer Score Snapshot NOT FOR LAYOUT</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>