salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Integrations__c.field-meta.xml
<CustomField>
    <fullName>Integrations__c</fullName>
    <label>Integrations</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>