salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Internal_IPs__c.field-meta.xml
<CustomField>
    <fullName>Internal_IPs__c</fullName>
    <label># Internal Assets</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>