salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/IPIMSAccountCount__c.field-meta.xml
<CustomField>
    <fullName>IPIMSAccountCount__c</fullName>
    <label>IPIMS Account Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>