salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Is_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Is_Enterprise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enterprise Account</label>
    <type>Checkbox</type>
</CustomField>