salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/IsDuplicateForReview__c.field-meta.xml
<CustomField>
    <fullName>IsDuplicateForReview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate for Review</label>
    <type>Checkbox</type>
</CustomField>