salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/IsOnboardingInProgress__c.field-meta.xml
<CustomField>
    <fullName>IsOnboardingInProgress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding in Progress</label>
    <type>Checkbox</type>
</CustomField>