salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/IsTop100__c.field-meta.xml
<CustomField>
    <fullName>IsTop100__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top 100?</label>
    <type>Checkbox</type>
</CustomField>