salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ISVPartnerTier__c.field-meta.xml
<CustomField>
    <fullName>ISVPartnerTier__c</fullName>
    <label>ISV Partner Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>