salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ISVPartnerType__c.field-meta.xml
<CustomField>
    <fullName>ISVPartnerType__c</fullName>
    <label>ISV Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracted Partner</fullName>
            </value>
            <value>
                <fullName>Prospective Partner</fullName>
            </value>
            <value>
                <fullName>Community Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>