salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ISVStatus__c.field-meta.xml
<CustomField>
    <fullName>ISVStatus__c</fullName>
    <label>ISV Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Integrated</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>In Discussions</fullName>
            </value>
            <value>
                <fullName>Integration In-Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>