salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/LatestCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>LatestCaseNumber__c</fullName>
    <label>Latest Case Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>