salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/LegalNotes__c.field-meta.xml
<CustomField>
    <fullName>LegalNotes__c</fullName>
    <label>Export Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>