salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/LinktoAppSecIntegrationPage__c.field-meta.xml
<CustomField>
    <fullName>LinktoAppSecIntegrationPage__c</fullName>
    <label>Link to AppSec Integration Page</label>
    <type>Url</type>
</CustomField>