salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/LinktoConnectIntegrationPage__c.field-meta.xml
<CustomField>
    <fullName>LinktoConnectIntegrationPage__c</fullName>
    <label>Link to Connect Integration Page</label>
    <type>Url</type>
</CustomField>