salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/LinktoIDRIntegrationPage__c.field-meta.xml
<CustomField>
    <fullName>LinktoIDRIntegrationPage__c</fullName>
    <label>Link to IDR Integration Page</label>
    <type>Url</type>
</CustomField>