salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/LinktoVMIntegrationPage__c.field-meta.xml
<CustomField>
    <fullName>LinktoVMIntegrationPage__c</fullName>
    <label>Link to VM Integration Page</label>
    <type>Url</type>
</CustomField>