salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ManagedApplicationSecurityMAS__c.field-meta.xml
<CustomField>
    <fullName>ManagedApplicationSecurityMAS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managed Application Security (MAS)</label>
    <type>Checkbox</type>
</CustomField>