salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ManagedDetectionResponseMDR__c.field-meta.xml
<CustomField>
    <fullName>ManagedDetectionResponseMDR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managed Detection Response (MDR)</label>
    <type>Checkbox</type>
</CustomField>