salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ManagerLevelTeam__c.field-meta.xml
<CustomField>
    <fullName>ManagerLevelTeam__c</fullName>
    <label>Manager Level Team</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TeamTerritoryGroup__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC ANZ</fullName>
            </value>
            <value>
                <fullName>APAC China</fullName>
            </value>
            <value>
                <fullName>APAC India</fullName>
            </value>
            <value>
                <fullName>APAC Japan</fullName>
            </value>
            <value>
                <fullName>APAC Korea</fullName>
            </value>
            <value>
                <fullName>APAC Southeast Asia</fullName>
            </value>
            <value>
                <fullName>Central Enterprise</fullName>
            </value>
            <value>
                <fullName>Central Mid-Market North</fullName>
            </value>
            <value>
                <fullName>Central Mid-Market South</fullName>
            </value>
            <value>
                <fullName>Central Named North</fullName>
            </value>
            <value>
                <fullName>Central Named South</fullName>
            </value>
            <value>
                <fullName>East Enterprise</fullName>
            </value>
            <value>
                <fullName>East Mid-Market North</fullName>
            </value>
            <value>
                <fullName>East Mid-Market South</fullName>
            </value>
            <value>
                <fullName>East Named North</fullName>
            </value>
            <value>
                <fullName>East Named South</fullName>
            </value>
            <value>
                <fullName>EMEA DACH &amp; Benelux</fullName>
            </value>
            <value>
                <fullName>EMEA Eastern Europe</fullName>
            </value>
            <value>
                <fullName>EMEA Middle East &amp; Africa</fullName>
            </value>
            <value>
                <fullName>EMEA-Scandinavia/Nordics</fullName>
            </value>
            <value>
                <fullName>EMEA Southern Europe</fullName>
            </value>
            <value>
                <fullName>EMEA-UK-Ireland</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>SLED East</fullName>
            </value>
            <value>
                <fullName>SLED West</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>West Canada</fullName>
            </value>
            <value>
                <fullName>West Enterprise</fullName>
            </value>
            <value>
                <fullName>West Mid-Market North</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>