salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ManagerVulnerabilityManagementMVM__c.field-meta.xml
<CustomField>
    <fullName>ManagerVulnerabilityManagementMVM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Vulnerability Management (MVM)</label>
    <type>Checkbox</type>
</CustomField>