salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/NDADate__c.field-meta.xml
<CustomField>
    <fullName>NDADate__c</fullName>
    <label>NDA Date</label>
    <type>Date</type>
</CustomField>