salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/NetsuiteCompetitorId__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteCompetitorId__c</fullName>
    <externalId>true</externalId>
    <label>NetSuite Competitor ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>