salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/NetsuiteCustomer__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteCustomer__c</fullName>
    <formula>IF(NetsuiteCustomerId__c != NULL,
HYPERLINK($Setup.NetsuiteSetting__c.BaseUrl__c &amp; &quot;/app/common/entity/custjob.nl?id=&quot;&amp; NetsuiteCustomerId__c , &quot;Netsuite Customer&quot;),
&quot;Netsuite Customer Not Found&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetSuite Customer</label>
    <type>Text</type>
</CustomField>