salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/NetsuiteCustomerId__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteCustomerId__c</fullName>
    <externalId>true</externalId>
    <label>NetSuite Customer ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>