salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/NetsuitePartnerId__c.field-meta.xml
<CustomField>
    <fullName>NetsuitePartnerId__c</fullName>
    <label>NetSuite Partner ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>