salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/NumberofCases__c.field-meta.xml
<CustomField>
    <fullName>NumberofCases__c</fullName>
    <label>Number of Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>