salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/NumberofContacts__c.field-meta.xml
<CustomField>
    <fullName>NumberofContacts__c</fullName>
    <label>Number of Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>