salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/NumberofEngineers__c.field-meta.xml
<CustomField>
    <fullName>NumberofEngineers__c</fullName>
    <label>Num Engineers (Pre &amp; Post Sale)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>