salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/NumberofSalesReps__c.field-meta.xml
<CustomField>
    <fullName>NumberofSalesReps__c</fullName>
    <label>Num Sales Reps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>