salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/OnboardingSpecialist__c.field-meta.xml
<CustomField>
    <fullName>OnboardingSpecialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts8</relationshipName>
    <type>Lookup</type>
</CustomField>