salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/OpenCases__c.field-meta.xml
<CustomField>
    <fullName>OpenCases__c</fullName>
    <inlineHelpText>This is the count of open cases directly associated to this Account. It does not include open cases that are associated to parent or child account records.</inlineHelpText>
    <label>Open Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>