salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/OpenOpportunities__c.field-meta.xml
<CustomField>
    <fullName>OpenOpportunities__c</fullName>
    <description>Field to Count Open Opportunities. (PHX-5432)</description>
    <label>Open Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Pending Acceptance, Discovery, Positioning, Propose, Negotiation, Closed Submit</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>