salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/OtherVendorsSold__c.field-meta.xml
<CustomField>
    <fullName>OtherVendorsSold__c</fullName>
    <label>Other Vendors Sold</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tenable</fullName>
            </value>
            <value>
                <fullName>Qualys</fullName>
            </value>
            <value>
                <fullName>Core Security</fullName>
            </value>
            <value>
                <fullName>LogRhythm</fullName>
            </value>
            <value>
                <fullName>Tanium</fullName>
            </value>
            <value>
                <fullName>Splunk</fullName>
            </value>
            <value>
                <fullName>FireEye</fullName>
            </value>
            <value>
                <fullName>SecureWorks</fullName>
            </value>
            <value>
                <fullName>Exabeam</fullName>
            </value>
            <value>
                <fullName>Securonics</fullName>
            </value>
            <value>
                <fullName>Intel Security (McAfee)</fullName>
            </value>
            <value>
                <fullName>ForeScout</fullName>
            </value>
            <value>
                <fullName>CyberArk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>