salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/OutstandingBalance__c.field-meta.xml
<CustomField>
    <fullName>OutstandingBalance__c</fullName>
    <label>Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>