salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/PartnerAccountRegion__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccountRegion__c</fullName>
    <label>Partner Account Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>