salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/PartnerAccountSubRegion__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccountSubRegion__c</fullName>
    <label>Partner Account Sub Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Fed</fullName>
            </value>
            <value>
                <fullName>NA West</fullName>
            </value>
            <value>
                <fullName>NA Central</fullName>
            </value>
            <value>
                <fullName>NA East</fullName>
            </value>
            <value>
                <fullName>NA National</fullName>
            </value>
            <value>
                <fullName>UKI</fullName>
            </value>
            <value>
                <fullName>Benelux</fullName>
            </value>
            <value>
                <fullName>Nordics</fullName>
            </value>
            <value>
                <fullName>DACH</fullName>
            </value>
            <value>
                <fullName>Middle East &amp; Africa</fullName>
            </value>
            <value>
                <fullName>Southern Europe &amp; N. Africa</fullName>
            </value>
            <value>
                <fullName>Eastern Europe &amp; Italy</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>India Subcontinent</fullName>
            </value>
            <value>
                <fullName>Southeast Asia</fullName>
            </value>
            <value>
                <fullName>North Asia (Other)</fullName>
            </value>
            <value>
                <fullName>North Asia (Korea)</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>US SLED</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>