salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/PartnerAgreementDate__c.field-meta.xml
<CustomField>
    <fullName>PartnerAgreementDate__c</fullName>
    <label>Partner Agreement Date</label>
    <type>Date</type>
</CustomField>