salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/PartnerAnnualRevenue__c.field-meta.xml
<CustomField>
    <fullName>PartnerAnnualRevenue__c</fullName>
    <label>Partner Annual Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; $5M</fullName>
            </value>
            <value>
                <fullName>$5M - $10M</fullName>
            </value>
            <value>
                <fullName>$11M - $25M</fullName>
            </value>
            <value>
                <fullName>$26M - $50M</fullName>
            </value>
            <value>
                <fullName>$51M - $100M</fullName>
            </value>
            <value>
                <fullName>$101M - $500M</fullName>
            </value>
            <value>
                <fullName>$501M - $1B</fullName>
            </value>
            <value>
                <fullName>&gt; $1B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>