salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/PartnerDiligenceCompleted__c.field-meta.xml
<CustomField>
    <fullName>PartnerDiligenceCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Diligence Completed</label>
    <type>Checkbox</type>
</CustomField>