salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/PartnerLevel__c.field-meta.xml
<CustomField>
    <fullName>PartnerLevel__c</fullName>
    <description>Shows partner levels applicable to pricing rules</description>
    <formula>IF(INCLUDES( Rapid7PartnerLevel__c , &quot;Value Added Reseller - Bronze&quot;), &quot;Bronze&quot;,
IF(INCLUDES( Rapid7PartnerLevel__c , &quot;Value Added Reseller - Silver&quot;), &quot;Silver&quot;,
IF(INCLUDES( Rapid7PartnerLevel__c , &quot;Value Added Reseller - Gold&quot;), &quot;Gold&quot;, &quot;&quot;)))</formula>
    <label>PACT Program Level</label>
    <type>Text</type>
</CustomField>