salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/PartnerNFRKey__c.field-meta.xml
<CustomField>
    <fullName>PartnerNFRKey__c</fullName>
    <label>Partner NFR Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>