salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/PartnerNFRKeyDate__c.field-meta.xml
<CustomField>
    <fullName>PartnerNFRKeyDate__c</fullName>
    <label>Partner NFR Key Date</label>
    <type>Date</type>
</CustomField>