salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <defaultValue>IF($RecordType.DeveloperName == &#39;Customer&#39;, &#39;Net 0&#39;, &#39;&#39;)</defaultValue>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom-See Notes</fullName>
            </value>
            <value>
                <fullName>Due on 1st</fullName>
            </value>
            <value>
                <fullName>Due on Receipt</fullName>
            </value>
            <value>
                <fullName>Future Due (Finance Use Only)</fullName>
            </value>
            <value>
                <fullName>Net 0</fullName>
            </value>
            <value>
                <fullName>Net 7</fullName>
            </value>
            <value>
                <fullName>Net 10</fullName>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 55</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 75</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Prepaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>