salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/POPortalRequired__c.field-meta.xml
<CustomField>
    <fullName>POPortalRequired__c</fullName>
    <description>This field will help sales know when a customer or partner requires a PO</description>
    <label>PO/Portal Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PO Required</fullName>
            </value>
            <value>
                <fullName>Portal Required</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Amount Dependent</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
                <isActive>false</isActive>
                <label>Blank</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>