salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/PreferredDistributor__c.field-meta.xml
<CustomField>
    <fullName>PreferredDistributor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Partner will required for preferred distributor</inlineHelpText>
    <label>Restricted Distributor</label>
    <type>Checkbox</type>
</CustomField>