salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ProductActive__c.field-meta.xml
<CustomField>
    <fullName>ProductActive__c</fullName>
    <label>Products - Active</label>
    <type>TextArea</type>
</CustomField>