salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ProductAdoptionHealthScore__c.field-meta.xml
<CustomField>
    <fullName>ProductAdoptionHealthScore__c</fullName>
    <label>Product Adoption Health Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>