salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ProductsActive__c.field-meta.xml
<CustomField>
    <fullName>ProductsActive__c</fullName>
    <label>Products - Active (Old)</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>