salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ProductsInactive__c.field-meta.xml
<CustomField>
    <fullName>ProductsInactive__c</fullName>
    <label>Products - Inactive</label>
    <type>TextArea</type>
</CustomField>