salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ProductsLifetime__c.field-meta.xml
<CustomField>
    <fullName>ProductsLifetime__c</fullName>
    <label>Products - Lifetime</label>
    <type>TextArea</type>
</CustomField>